css/style.css
:root {
    --background-color: #212121;
    --background-accent-color: #121212;
    --accent-color: #ff9800;
    --text-color: #ffffff;
    --text-accent-color: #aaaaaa;
}

body {
    margin: 0;
    background-color: var(--background-color);
    font-family: Arial, sans-serif;
    color: white;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    padding: 10px 20px;
    background-color: var(--background-accent-color);
}

.logo {
    width: 40px;
    height: auto;
    margin-right: 5px;
}

.title {
    position: absolute;
    right: 50%;
    align-self: center;
    margin: 0;
    font-weight: bold;
    font-size: 3.125rem;
    color: var(--accent-color);
    transform: translateX(50%);
    text-decoration: none;
}

a {
    color: var(--accent-color);
}

@media screen and (max-width: 1080px) {
    .nav-links {
        display: none;
    }
}

.nav-links a {
    margin-left: 10px;
    font-size: 1.25rem;
    text-decoration: none;
}

.nav-links a:hover {
    color: var(--text-accent-color);
}

.sections {
    margin: 20px;
}

hr {
    margin: 20px -2px;
    border: 0;
    border-top: 1px solid var(--text-accent-color);
}

.heading {
    margin: 0;
    font-size: 1.875rem;
    font-weight: bold;
    color: var(--accent-color);
    text-decoration: none;
}

.hilight {
    font-size: 1.25rem;
}

.gray-out {
    color: var(--text-accent-color);
}

.download-buttons {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.download-button {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
    flex-basis: calc(25% - 10px * 2);
    box-sizing: border-box;
    margin: 10px;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    font-size: 1.25rem;
    color: black;
    background-color: var(--accent-color);
    text-decoration: none;
}

@media screen and (max-width: 1080px) {
    .download-button {
        flex-grow: 1;
        flex-shrink: 1;
        flex-basis: calc(50% - 10px * 2);
    }
}

.download-icon {
    width: 40px;
    height: auto;
    margin-right: 5px;
}

.release {
    margin-bottom: 32px;
}

.release a {
    margin-bottom: 0px;
    text-decoration: none;
}

.release p {
    margin-top: 0px;
}

.release h2 {
    margin-bottom: 2px;
}

.collapsible-content {
    max-height: 0;
    transition: max-height 0.5s ease-out;
    overflow-y: hidden;
}

.collapsible-button:before {
    content: url("../svg/arrow.svg");
    margin-right: 5px;
    display: inline-block;
    margin-right: 5px;
    font-size: 1.5rem;
    transform: rotate(0deg);
    transition: transform 0.25s ease-out;
}

.collapsible-button.active:before {
    transform: rotate(90deg);
    transition: transform 0.25s ease-out;
}

.collapsible-content img {
    border: 2px solid #AAAAAA;
    border-radius: 5px;
}

